# python-teradata

./: .gitignore  README.md  app.py  python-nfl-ddl.sql  python-teradata.py  requirements.txt  teradata-setup.sql
data/: game.csv  game_stats.csv  game_type.csv  game_venue.csv  player.csv  team_lookup.csv  venue.csv  weather.csv
eng/pytdml/: README.md  pyproject.toml
eng/pytdml/conf/database/: teradata_nfl.yaml
eng/pytdml/scripts/: jobvars-template.jvar  load-table.tpt
eng/pytpt/: .env.example  README.md  app.py  pyproject.toml
eng/pytpt/conf/: config.yaml
eng/pytpt/conf/database/: PRD_ADS_PYTHON_NFL_DB.yaml  teradata_nfl.yaml
eng/pytpt/ddl/: game.sql  game_stats.sql  game_type.sql  game_venue.sql  player.sql  team_lookup.sql  venue.sql  weather.sql
eng/pytpt/scripts/: create-table.tpt  drop-table.tpt  jobvars-template.jvar  load-table.tpt
eng/pytpt/src/pytpt/: __init__.py  config_utils.py  csv_utils.py  logging_config.py  templates.py  tpt_runner.py
eng/pytpt/tests/: test_csv_utils.py  test_integration.py  test_templates.py  test_tpt_runner.py
